--- a/src/index.jade
+++ b/src/index.jade
@@ -8,7 +8,7 @@ block root
 					include ./blocks/main-info/main-info
 			hr.separator
 			section.section
-				h1.section__title #[span.icon.icon-summary] Summary
+				h1.section__title #[span.icon.icon-summary] Summar
 				.summary
 					include ./blocks/summary/summary
 			hr.separator
