--- a/src/blocks/main-info/main-info.jade
+++ b/src/blocks/main-info/main-info.jade
@@ -1,13 +1,16 @@
-.main-info__column.main-info__column-left
-	hgroup.main-info__titles
-		h1.main-info__title Dmytro Rudnytskykh
-		h2.main-info__subtitle Frontend, JS Developer
-	if contactInfo && contactInfo.items
-		dl.main-info__list
-			each item, i in contactInfo.items
-				.main-info__item
-					dt.main-info__label #{item.key}:
-					dd.main-info__value!= item.value
+if contactInfo
+	.main-info__column.main-info__column-left
+		hgroup.main-info__titles
+			h1.main-info__title!= contactInfo.name 
+			h2.main-info__subtitle!= contactInfo.subtitle 
+		if contactInfo.items
+			dl.main-info__list
+				each item, i in contactInfo.items
+					.main-info__item
+						dt.main-info__label #{item.key}:
+						dd.main-info__value!= item.value
+		.main-info__links
+			include ../sources/sources
 
 .main-info__column.main-info__column-right
 	if contactInfo.mainPhoto
