--- a/src/blocks/project/project.styl
+++ b/src/blocks/project/project.styl
@@ -1,5 +1,6 @@
 .project
-	padding 0 10px
+	@media tablet_desktop
+		padding 0 10px
 	&__name
 		font-size 24px
 		margin 0
@@ -11,10 +12,10 @@
 		font-size 14px
 	&__tag
 		display: inline-block
-		background-color #f1c40f
-		padding 5px 10px
-		margin 3px 2px
+		padding 3px 7px
+		margin 3px 1px
 		line-height 1.1
-		border-radius 50px
 		font-size 14px
+		border 1px solid #7f8c8d
+		border-radius 50px
 		color #2c3e50
