--- a/src/blocks/projects/projects.styl
+++ b/src/blocks/projects/projects.styl
@@ -1,9 +1,9 @@
 .projects
 	display flex
 	flex-flow row wrap
-	@media desktop
+	@media tablet_desktop
 		margin 0 -10px
 	.project
-		margin 10px 0
-		@media desktop
+		@media tablet_desktop
+			margin 10px 0
 			width 50%
