--- a/src/blocks/programming-skills/programming-skills.styl
+++ b/src/blocks/programming-skills/programming-skills.styl
@@ -2,15 +2,19 @@
 	&__title
 		margin 0
 	&__item
-		margin 5px 0
+		@media tablet_desktop
+			margin 5px 0
+		@media phone
+			margin 10px 0
 	&__list
 		margin 0
 		padding 0
 		list-style none
 	&__sub-title
-		display: inline-block
-		width 250px
 		color #7f8c8d
+		@media tablet_desktop
+			width 250px
+			display: inline-block
 	&__value
 		display: inline-block
 		margin: 0
