--- a/src/blocks/projects/projects.jade
+++ b/src/blocks/projects/projects.jade
@@ -2,7 +2,7 @@ if projects
 	each item in projects
 		article.project
 			h1.project__name
-				a.project__link(href="//#{item.url}" title=item.name)!= item.name
+				a.project__link(href="//#{item.url}" title=item.name target="_blank")!= item.name
 			if item.tags
 				dl.project__tags
 					dt.project__tags-label Tags:
