--- a/src/globals/variables.styl
+++ b/src/globals/variables.styl
@@ -11,3 +11,6 @@ desktop = "(min-width: " + desktopWidth + ")"
 
 tablet = "(min-width: " + tabletWidth + ") and (max-width: " + (desktopWidth - 1) + ")"
 phone = "(max-width: " + (tabletWidth - 1) + ")"
+
+tablet_desktop = "(min-width: " + tabletWidth + ")"
+phone_tablet = "(max-width: " + (desktopWidth - 1) + ")"
