--- a/src/index.jade
+++ b/src/index.jade
@@ -8,37 +8,37 @@ block root
 					include ./blocks/main-info/main-info
 			hr.separator
 			section.section
-				h1.section__title #[span.icon.icon-summary] Summar
+				h1.section__title #[span.section__icon.icon-summary] Summary
 				.summary
 					include ./blocks/summary/summary
 			hr.separator
 			section.section
-				h1.section__title #[span.icon.icon-case] Projects
+				h1.section__title #[span.section__icon.icon-case] Projects
 				.projects
 					include ./blocks/projects/projects
 			hr.separator
 			section.section
-				h1.section__title #[span.icon.icon-tag] Hard skills
+				h1.section__title #[span.section__icon.icon-tag] Hard skills
 				.programming-skills
 					include ./blocks/programming-skills/programming-skills
 			hr.separator
 			section.section
-				h1.section__title #[span.icon-gears] Soft skills
+				h1.section__title #[span.section__icon.icon-gears] Soft skills
 				.soft-skills
 					include ./blocks/soft-skills/soft-skills
 			hr.separator
 			section.section
-				h1.section__title #[span.icon-chart] Work Experience
+				h1.section__title #[span.section__icon.icon-chart] Work Experience
 				.experience
 					include ./blocks/experience/experience
 			hr.separator
 			section.section
-				h1.section__title #[span.icon.icon-world] Languages
+				h1.section__title #[span.section__icon.icon.icon-world] Languages
 				.languages
 					include ./blocks/languages/languages
 			hr.separator
 			section.section
-				h1.section__title #[span.icon-cap] Education
+				h1.section__title #[span.section__icon.icon-cap] Education
 				.education
 					include ./blocks/education/education
 			
