--- a/src/blocks/footer/footer.jade
+++ b/src/blocks/footer/footer.jade
@@ -1,1 +1,1 @@
-p insiped by #[a(href="http://motherfuckingwebsite.com/") motherfuckingwebsite.com]
+p insiped by #[a(href="//bettermotherfuckingwebsite.com/" target="_blank") bettermotherfuckingwebsite.com]
