--- a/src/blocks/languages/languages.styl
+++ b/src/blocks/languages/languages.styl
@@ -11,7 +11,7 @@
 			width 110px
 	&__description
 		@media tablet_desktop
-			font-style italic
+			color #7f8c8d
 		@media phone
 			display none
 	&__value
