--- a/src/globals/variables.styl
+++ b/src/globals/variables.styl
@@ -7,7 +7,7 @@ phoneWidth = 320px
 // lg = "(min-width: " + (lgWidth) + ")"
 // md = "(min-width: " + mdWidth + ") and (max-width: " + (lgWidth - 1) + ")"
 // sm = "(min-width: " + smWidth + ") and (max-width: " + (mdWidth - 1) + ")"
-desktop = "(min-width: " + desktopWidth + ")"
+desktop = "screen and (min-width: " + desktopWidth + ")"
 
 tablet = "(min-width: " + tabletWidth + ") and (max-width: " + (desktopWidth - 1) + ")"
 phone = "(max-width: " + (tabletWidth - 1) + ")"
