--- a/src/index.jade
+++ b/src/index.jade
@@ -3,41 +3,41 @@ extends ./layouts/root
 block root
 	.container
 		main.main
-			section
+			section.section#main
 				.main-info
 					include ./blocks/main-info/main-info
 			hr.separator
-			section.section
+			section.section#summary
 				h1.section__title #[span.section__icon.icon-summary] Summary
 				.summary
 					include ./blocks/summary/summary
 			hr.separator
-			section.section
+			section.section#cases
 				h1.section__title #[span.section__icon.icon-case] Projects
 				.projects
 					include ./blocks/projects/projects
 			hr.separator
-			section.section
+			section.section#hard-skills
 				h1.section__title #[span.section__icon.icon-tag] Hard skills
 				.programming-skills
 					include ./blocks/programming-skills/programming-skills
 			hr.separator
-			section.section
+			section.section#soft-skills
 				h1.section__title #[span.section__icon.icon-gears] Soft skills
 				.soft-skills
 					include ./blocks/soft-skills/soft-skills
 			hr.separator
-			section.section
+			section.section#experience
 				h1.section__title #[span.section__icon.icon-chart] Work Experience
 				.experience
 					include ./blocks/experience/experience
 			hr.separator
-			section.section
+			section.section#languages
 				h1.section__title #[span.section__icon.icon.icon-world] Languages
 				.languages
 					include ./blocks/languages/languages
 			hr.separator
-			section.section
+			section.section#education
 				h1.section__title #[span.section__icon.icon-cap] Education
 				.education
 					include ./blocks/education/education
