--- a/src/globals/variables.styl
+++ b/src/globals/variables.styl
@@ -9,8 +9,8 @@ phoneWidth = 320px
 // sm = "(min-width: " + smWidth + ") and (max-width: " + (mdWidth - 1) + ")"
 desktop = "screen and (min-width: " + desktopWidth + ")"
 
-tablet = "(min-width: " + tabletWidth + ") and (max-width: " + (desktopWidth - 1) + ")"
+tablet = "(min-width: " + tabletWidth + ") and (max-width: " + (desktopWidth - 1) + "), print"
 phone = "(max-width: " + (tabletWidth - 1) + ")"
 
-tablet_desktop = "(min-width: " + tabletWidth + ")"
+tablet_desktop = "(min-width: " + tabletWidth + "), print"
 phone_tablet = "(max-width: " + (desktopWidth - 1) + ")"
