--- a/src/blocks/sources/sources.jade
+++ b/src/blocks/sources/sources.jade
@@ -1,4 +1,5 @@
 each item in links
-	a.sources__link( href=item.url title=item.title target=item.target)
-		span.sources__icon( class="icon-#{item.icon}" )
-		span.sources__title= item.title
+	if item.url.length
+		a.sources__link( href=item.url title=item.title target=item.target)
+			span.sources__icon( class="icon-#{item.icon}" )
+			span.sources__title= item.title
