--- a/src/blocks/languages/languages.styl
+++ b/src/blocks/languages/languages.styl
@@ -2,13 +2,9 @@
 	&__item
 		clearfix()
 	&__key
+		float left
+		width 110px
 		color #7f8c8d
-		@media tablet_desktop
-			float left
-			width 15%
-		@media phone
-			display: inline-block
-			width 110px
 	&__description
 		@media tablet_desktop
 			color #7f8c8d
@@ -16,9 +12,9 @@
 			display none
 	&__value
 		margin 0
-		@media tablet_desktop
-			float left
-			width 85%
-		@media phone
-			display: inline-block
+		float left
+		@media desktop
+			width 774px
+		@media tablet
+			width 598px
 			
