--- a/src/layouts/root.jade
+++ b/src/layouts/root.jade
@@ -7,7 +7,7 @@ html
 		title
 			block title
 		block fonts
-			link(href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css')
+			//- link(href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css')
 		block styles
 			link(href="assets/project.css" rel="stylesheet")
 	body
