--- a/src/assets/styles/helpers.styl
+++ b/src/assets/styles/helpers.styl
@@ -13,6 +13,8 @@ gutterPhone = 10px
 .separator
 	@media tablet_desktop
 		margin-top 30px
+	@media print
+		margin-top 5px
 
 .hidden-phone
 	@media phone
