--- a/src/blocks/main-info/main-info.jade
+++ b/src/blocks/main-info/main-info.jade
@@ -15,4 +15,4 @@ if contactInfo
 .main-info__column.main-info__column-right
 	if contactInfo.mainPhoto
 		.main-info__photo-container
-			img.main-info__photo(src=contactInfo.mainPhoto alt="" width="200" height="301")
+			img.main-info__photo(src=contactInfo.mainPhoto alt="")
