--- a/src/blocks/programming-skills/programming-skills.styl
+++ b/src/blocks/programming-skills/programming-skills.styl
@@ -6,6 +6,8 @@
 			margin 5px 0
 		@media phone
 			margin 10px 0
+		@media print
+			margin 0
 	&__list
 		margin 0
 		padding 0
@@ -21,3 +23,5 @@
 		font-weight: normal
 	&__type
 		margin-bottom 20px
+		@media print
+			margin-bottom 5px
