--- a/src/globals/variables.styl
+++ b/src/globals/variables.styl
@@ -10,7 +10,7 @@ phoneWidth = 320px
 desktop = "screen and (min-width: " + desktopWidth + ")"
 
 tablet = "(min-width: " + tabletWidth + ") and (max-width: " + (desktopWidth - 1) + "), print"
-phone = "(max-width: " + (tabletWidth - 1) + ")"
+phone = "screen and (max-width: " + (tabletWidth - 1) + ")"
 
 tablet_desktop = "(min-width: " + tabletWidth + "), print"
 phone_tablet = "(max-width: " + (desktopWidth - 1) + ")"
