--- a/src/blocks/main-info/main-info.styl
+++ b/src/blocks/main-info/main-info.styl
@@ -5,17 +5,23 @@
 	@media phone
 		margin-top 10px
 		font-size 15px
+	@media print
+		font-size 13px
+		margin-top 0
 	&__column
 		@media tablet_desktop
 			float left
 			width 50%
 	&__photo
 		width 200px
+		@media print
+			width 170px
 		&-container
-			@media tablet_desktop
-				text-align right
+			text-align right
 			@media phone
 				text-align: center
+			@media print
+				text-align: right
 	&__label
 		color #7f8c8d
 		display inline-block
