--- a/src/blocks/projects/projects.jade
+++ b/src/blocks/projects/projects.jade
@@ -9,4 +9,4 @@ if projects
 					each tag in item.tags
 						dt.project__tag!= tag
 			if item.responsibilities
-				p.item__desription!= item.responsibilities
+				p.project__desription!= item.responsibilities
