--- a/src/blocks/soft-skills/soft-skills.jade
+++ b/src/blocks/soft-skills/soft-skills.jade
@@ -2,6 +2,6 @@ if softSkills
 	ul.soft-skills__list
 		each item in softSkills
 			li.soft-skills__item
-				span.soft-skills__key #{item.key}
+				span.soft-skills__key !{item.key}
 				|  — 
-				span.soft-skills__value #{item.value}
+				span.soft-skills__value !{item.value}
