--- a/src/assets/styles/general.styl
+++ b/src/assets/styles/general.styl
@@ -24,11 +24,11 @@ a
 	
 	&[href*="//"]
 		&:after
-			content "\e60b"
+			content "\e900"
 			position: relative
-			font-size .8em
-			top -0.3em
-			left 0.2em
+			font-size .5em
+			top -.6em
+			left .5em
 			iconParams()
 		@media print
 			&:after
