--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="container">
-    <main class="main">
+    <main class="main" itemscope itemtype="http://schema.org/Person">
         <section id="main" class="section">
             {% include main-info.html %}
         </section>
