--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -1,6 +1,6 @@
 <div class="experience">
     {% for item in site.data.experience %}
-        <div class="experience__item">
+        <div class="experience__item" itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
             <div class="experience__column experience__column_left">
                 <div class="experience__duration">
                     <span class="experience__label">Years:</span>
@@ -9,7 +9,8 @@
                 <div class="experience__company">
                     <span class="experience__label">Company:</span>
                     {% if item.company.url %}
-                        <a href="//{{ item.company.url }}"
+                        <a itemprop="name"
+                           href="//{{ item.company.url }}"
                            title="{{ item.company.url }}"
                            class="experience__value"
                            target="_blank">{{ item.company.name }}</a>
@@ -24,7 +25,8 @@
             </div>
             <div class="experience__column experience__column_right">
                 <div class="experience__description">
-                    <p class="experience__value">{{ item.description }}</p>
+                    <p itemprop="description"
+                       class="experience__value">{{ item.description }}</p>
                 </div>
             </div>
         </div>
