--- a/_includes/programming-skills.html
+++ b/_includes/programming-skills.html
@@ -1,15 +1,15 @@
 {% assign programmingSkills = site.data.programming_skills %}
 
-{% for category in programmingSkills %}
-    <div class="programming-skills">
+<div class="programming-skills" itemscope itemtype="http://schema.org/ItemList">
+    {% for category in programmingSkills %}
         <div class="programming-skills__type">
             <h2 class="programming-skills__title">{{ category.name }}</h2>
             {% if category.subcategories %}
                 {% for subcategory in category.subcategories %}
                     <dl class="programming-skills__list">
                         <div class="programming-skills__item">
-                            <dt class="programming-skills__sub-title">{{ subcategory.name }}:</dt>
-                            <dd class="programming-skills__value">
+                            <dt class="programming-skills__sub-title" itemprop="name">{{ subcategory.name }}:</dt>
+                            <dd class="programming-skills__value" itemprop="itemListElement">
                                 {{ subcategory.values | join: ", " }}</dd>
                         </div>
                     </dl>
@@ -23,5 +23,5 @@
                 </span>
             {% endif %}
         </div>
-    </div>
-{% endfor %}
+    {% endfor %}
+</div>
