--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,3 +1,5 @@
+<p class="projects__disclaimer">Some of projects which I participated and which are available in the web:</p>
+
 <div class="projects">
     {% for project in site.data.projects %}
     <article class="project">
@@ -11,6 +13,4 @@
         <p class="project__description">{{ project.description }}</p>
     </article>
     {% endfor %}
-
-    <p class="projects__disclaimer"><sup>*</sup> Some projects already closed or under NDA, so I can not put links here.</p>
 </div>
