--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html lang="en">
 
-{% include head.html %}
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
+    <meta name="description"
+          content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
+
+    <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/assets/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/assets/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/assets/favicons/manifest.json">
+    <link rel="mask-icon" href="/assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">
+
+    {% if jekyll.environment == 'production' and site.google_analytics %}
+    {% include google-analytics.html %}
+    {% endif %}
+</head>
 
 <body>
+<div class="container">
+    <main class="main" itemscope itemtype="http://schema.org/Person">
+        <section id="main" class="section">
+            {% include main-info.html %}
+        </section>
+        <hr class="separator"/>
 
-{{ content }}
+        <section id="summary" class="section">
+            <h1 class="section__title"><span class="section__icon icon-summary"></span>Summary</h1>
 
+            {% include summary.html %}
+        </section>
+        <hr class="separator"/>
+
+        <section id="hard-skills" class="section">
+            <h1 class="section__title"><span class="section__icon icon-tag"></span>Hard skills</h1>
+            {% include programming-skills.html %}
+        </section>
+        <hr class="separator"/>
+
+        <section id="experience" class="section">
+            <h1 class="section__title"><span class="section__icon icon-chart"></span>Work Experience</h1>
+            {% include experience.html %}
+        </section>
+        <hr class="separator"/>
+
+        <section id="cases" class="section">
+            <h1 class="section__title"><span class="section__icon icon-case"></span>Projects</h1>
+            {% include projects.html %}
+        </section>
+        <hr class="separator"/>
+
+        <section id="soft-skills" class="section">
+            <h1 class="section__title"><span class="section__icon icon-gears"></span>Soft skills</h1>
+            {% include soft-skills.html %}
+        </section>
+        <hr class="separator"/>
+
+        <section id="languages" class="section">
+            <h1 class="section__title"><span class="section__icon icon-world"></span>Languages</h1>
+            {% include languages.html %}
+        </section>
+        <hr class="separator"/>
+
+        <section id="education" class="section">
+            <h1 class="section__title"><span class="section__icon icon-cap"></span>Education</h1>
+            {% include education.html %}
+        </section>
+    </main>
+</div>
 </body>
-
 </html>
