--- a/_sass/blocks/_experience.scss
+++ b/_sass/blocks/_experience.scss
@@ -1,5 +1,9 @@
 .experience {
   &__item {
+    & + .experience__item {
+      margin-top: 30px
+    }
+
     @media (min-width: 768px), print {
       display: flex;
     }
@@ -15,6 +19,7 @@
     @media (min-width: 768px) and (max-width: 1023px), print {
       width: 50%;
     }
+
     @media screen and (min-width: 1024px) {
       &_left {
         flex: 0 0 40%;
@@ -44,30 +49,12 @@
 
 @media (min-width: 768px), print {
   .experience__item {
-    margin-top: 30px
+    margin-top: 20px
   }
 }
 
 @media print {
-  .experience__item {
-    margin-top: 0
-  }
-}
-
-@media (min-width: 768px), print {
-  .experience__item + .experience__item {
-    margin-top: 50px
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .experience__item + .experience__item {
-    margin-top: 30px
-  }
-}
-
-@media print {
-  .experience__item + .experience__item {
-    margin-top: 10px
+  .experience__item, .experience__item + .experience__item {
+    margin-top: 10px;
   }
 }
