--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/assets/favicons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/assets/favicons/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/assets/favicons/manifest.json">
-    <link rel="mask-icon" href="/assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png?v=2">
+    <link rel="icon" type="image/png" href="/assets/favicons/favicon-32x32.png?v=2" sizes="32x32">
+    <link rel="icon" type="image/png" href="/assets/favicons/favicon-16x16.png?v=2" sizes="16x16">
+    <link rel="manifest" href="/assets/favicons/manifest.json?v=2">
+    <link rel="mask-icon" href="/assets/favicons/safari-pinned-tab.svg?v=2" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
 
     {% if jekyll.environment == 'production' and site.google_analytics %}
